# django-text-translator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
django_text_translator/: admin.py  apps.py  models.py
django_text_translator/migrations/: 0023_azureaitranslator_summary_and_more.py  0025_remove_azureaitranslator_deloyment_name_and_more.py
django_text_translator/models/: __init__.py  azureai.py  base.py  caiyun.py  claude.py  deepl.py  deeplweb.py  deeplx.py  dev.py  gemini.py  google_translate_web.py  microsoft_translate.py  moonshotai.py  openai.py
