[metadata]
name = django-text-translator
version = 2024.02.29_1
description = A Django application that supports adding multiple third-party engines for text translation.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/versun/django-text-translator
author = versun
author_email = django-text-translator@versun.me
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    django >= 5.0
    cityhash >= 0.4.7
    deepl >= 1.17.0
    PyDeepLX >= 1.0.7
    anthropic >= 0.16.0
    httpx >= 0.27.0
    django-encrypted-model-fields >= 0.6.5
    openai >= 1.12.0
    google-generativeai >= 0.3.2